k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manty-blast-mail
  namespace: manty-blast-mail
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: manty-blast-mail.manty.co.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: manty-blast-mail
                port:
                  number: 80
